# Leetcode

./: .gitignore  README.md
DataStructuresAndAlgo/CC++/: CMakeLists.txt  dsa.cc  main  main.cpp  main.hh
DataStructuresAndAlgo/CC++/include/: singlylinkedlist.hh
DataStructuresAndAlgo/CC++/src/: ainglylinkedlist.cc
DataStructuresAndAlgo/Fortran/: main  main.f90
DataStructuresAndAlgo/Go/: main.go
DataStructuresAndAlgo/JS-TS/: index.ts
DataStructuresAndAlgo/Java/: MegreSort.java
DataStructuresAndAlgo/Python/: doublylinkedlist.py  linkedlist.py  main.py  pyproject.toml
DataStructuresAndAlgo/Rust/binarytrees/: Cargo.toml
DataStructuresAndAlgo/Rust/binarytrees/src/: btree.rs  lib.rs
DataStructuresAndAlgo/Rust/singlylinkedlists/: Cargo.toml
DataStructuresAndAlgo/Rust/singlylinkedlists/src/: main.rs  singlylinkedlist.rs
DataStructuresAndAlgo/Zig/: build.zig.zon  main  main.zig
DataStructuresAndAlgo/Zig/src/: main.zig
leetcode/c/c++/: count-subarrays-of-length-three-with-a-condition.hh  main  main.cpp
